[project]
name = "icu-treatment-optimizer"
version = "1.0.0"
description = "RL environment for ICU patient treatment optimization"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn==0.30.1",
    "pydantic==2.7.1",
    "numpy>=2.3.2",
    "openai==1.30.1",
    "requests==2.32.2",
    "PyYAML==6.0.1",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "main:app"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends.legacy:build"